--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,5 @@ FakesAssemblies/
 
 # Visual Studio 6 workspace options file
 *.opt
+/src/GE/wwwroot/css/app.min.css
+/src/GE/wwwroot/css/app.css
