--- a/src/GE/bower.json
+++ b/src/GE/bower.json
@@ -1,9 +1,8 @@
 {
-	"name": "ASP.NET",
-	"private": true,
+  "name": "ASP.NET",
+  "private": true,
   "dependencies": {
     "bootstrap": "3.3.6",
-    "jquery": "2.2.0",
-    "opensanscondensed-googlefont": "*"
+    "webfont-opensans": "~0.0.2"
   }
 }
