--- a/src/GE/bower.json
+++ b/src/GE/bower.json
@@ -3,6 +3,6 @@
   "private": true,
   "dependencies": {
     "bootstrap": "3.3.6",
-    "webfont-opensans": "~0.0.2"
+    "opensanscondensed-googlefont": "*"
   }
 }
