--- a/src/GE/package.json
+++ b/src/GE/package.json
@@ -5,6 +5,8 @@
   "devDependencies": {
     "gulp": "3.9.0",
     "gulp-less": "3.0.5",
-    "gulp-concat": "2.6.0"
+    "gulp-concat": "2.6.0",
+    "gulp-cssmin": "0.1.7",
+    "rimraf": "2.5.0"
   }
 }
