--- a/GE.WebUI/Web.config
+++ b/GE.WebUI/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="GEDB_MOCK" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=GE;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\GEDB_MOCK.mdf" />
+    <add name="DbContext" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=GE;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\GEDB_MOCK.mdf" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
