--- a/SX.WebCore/SX.WebCore.csproj
+++ b/SX.WebCore/SX.WebCore.csproj
@@ -55,7 +55,7 @@
     <Compile Include="Article.cs" />
     <Compile Include="DbContext.cs" />
     <Compile Include="Enums.cs" />
-    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="News.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SeoInfo.cs" />
     <Compile Include="SeoKeyWord.cs" />
