--- a/SX.WebCore/SX.WebCore.csproj
+++ b/SX.WebCore/SX.WebCore.csproj
@@ -50,8 +50,8 @@
   <ItemGroup>
     <Compile Include="Abstract\ISxHasHtml.cs" />
     <Compile Include="Abstract\SxDbModel.cs" />
+    <Compile Include="Abstract\SxDbRepository.cs" />
     <Compile Include="Abstract\SxDbUpdatedModel.cs" />
-    <Compile Include="Abstract\ISxStorage.cs" />
     <Compile Include="Abstract\SxMaterial.cs" />
     <Compile Include="SxArticle.cs" />
     <Compile Include="SxDbContext.cs" />
