--- a/GE.WebUI/Views/web.config
+++ b/GE.WebUI/Views/web.config
@@ -17,6 +17,8 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="GE.WebUI" />
+      <!---->
+        <add namespace="GE.WebCoreExtantions"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
