--- a/GE.WebUI/package.json
+++ b/GE.WebUI/package.json
@@ -8,6 +8,7 @@
         "gulp-minify-css": "1.2.3",
         "gulp-autoprefixer": "3.1.0",
         "gulp-rename": "1.2.2",
+        "gulp-less": "3.0.5",
         "del": "2.2.0"
     }
 }
