--- a/GE.Tests/App.config
+++ b/GE.Tests/App.config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DbContext" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=GE;Integrated Security=SSPI;AttachDBFilename=d:\sites\GE\GE.WebUI\App_Data\GE.mdf" />
+    <add name="DbContext" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=GE;Integrated Security=SSPI;AttachDBFilename=e:\GE\GE.WebUI\App_Data\GE.mdf" />
   </connectionStrings>
 </configuration>
