--- a/GE.WebAdmin/Views/web.config
+++ b/GE.WebAdmin/Views/web.config
@@ -20,6 +20,8 @@
         <!---->
         <add namespace="GE.WebCoreExtantions"/>
         <add namespace="GE.WebAdmin.Resources"/>
+        <add namespace="GE.WebAdmin.Models"/>
+        <add namespace="SX.WebCore.HtmlHelpers"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
