--- a/GE.WebAdmin/bower.json
+++ b/GE.WebAdmin/bower.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "bootstrap": "~3.3.6",
     "metisMenu": "2.2.0",
-    "font-awesome": "4.5.0"
+    "font-awesome": "4.5.0",
+    "jquery-ajax-unobtrusive": "3.2.3"
   }
 }
