--- a/GE.WebUI/bower.json
+++ b/GE.WebUI/bower.json
@@ -23,6 +23,6 @@
   ],
   "dependencies": {
     "bootstrap": "~3.3.6",
-    "opensans-condensed-notosans": "webfont-opensans-condensed#~0.1.0"
+    "font-awesome": "4.5.0"
   }
 }
