--- a/GE.WebUI/package.json
+++ b/GE.WebUI/package.json
@@ -9,6 +9,8 @@
         "gulp-rename": "1.2.2",
         "gulp-less": "3.0.5",
         "del": "2.2.0",
-        "gulp-watch": "4.3.5"
+        "gulp-watch": "4.3.5",
+        "gulp-concat": "2.6.0",
+        "gulp-uglify": "1.5.1"
     }
 }
