--- a/GE.WebAdmin/GE.WebAdmin.csproj
+++ b/GE.WebAdmin/GE.WebAdmin.csproj
@@ -125,66 +125,32 @@
     <Content Include="bower_components\bootstrap\js\tooltip.js" />
     <Content Include="bower_components\bootstrap\js\transition.js" />
     <Content Include="bower_components\bootstrap\package.js" />
+    <Content Include="bower_components\cropper\dist\cropper.css" />
+    <Content Include="bower_components\cropper\dist\cropper.js" />
+    <Content Include="bower_components\cropper\dist\cropper.min.css" />
+    <Content Include="bower_components\cropper\dist\cropper.min.js" />
+    <Content Include="bower_components\cropper\src\img\bg.png" />
+    <Content Include="bower_components\cropper\src\js\bind.js" />
+    <Content Include="bower_components\cropper\src\js\build.js" />
+    <Content Include="bower_components\cropper\src\js\change.js" />
+    <Content Include="bower_components\cropper\src\js\cropper.js" />
+    <Content Include="bower_components\cropper\src\js\defaults.js" />
+    <Content Include="bower_components\cropper\src\js\handlers.js" />
+    <Content Include="bower_components\cropper\src\js\init.js" />
+    <Content Include="bower_components\cropper\src\js\intro.js" />
+    <Content Include="bower_components\cropper\src\js\methods.js" />
+    <Content Include="bower_components\cropper\src\js\outro.js" />
+    <Content Include="bower_components\cropper\src\js\plugin.js" />
+    <Content Include="bower_components\cropper\src\js\preview.js" />
+    <Content Include="bower_components\cropper\src\js\render.js" />
+    <Content Include="bower_components\cropper\src\js\template.js" />
+    <Content Include="bower_components\cropper\src\js\utilities.js" />
+    <Content Include="bower_components\cropper\src\js\variables.js" />
     <Content Include="bower_components\font-awesome\.gitignore" />
     <Content Include="bower_components\font-awesome\css\font-awesome.css" />
     <Content Include="bower_components\font-awesome\css\font-awesome.min.css" />
     <Content Include="bower_components\font-awesome\fonts\fontawesome-webfont.svg" />
     <Content Include="bower_components\font-awesome\HELP-US-OUT.txt" />
-    <Content Include="bower_components\Jcrop\css\Jcrop.css" />
-    <Content Include="bower_components\Jcrop\css\Jcrop.gif" />
-    <Content Include="bower_components\Jcrop\css\Jcrop.min.css" />
-    <Content Include="bower_components\Jcrop\demos\basic.html" />
-    <Content Include="bower_components\Jcrop\demos\box-sizing.html" />
-    <Content Include="bower_components\Jcrop\demos\circle.html" />
-    <Content Include="bower_components\Jcrop\demos\coords.html" />
-    <Content Include="bower_components\Jcrop\demos\demo_files\demos.css" />
-    <Content Include="bower_components\Jcrop\demos\demo_files\main.css" />
-    <Content Include="bower_components\Jcrop\demos\demo_files\pool.jpg" />
-    <Content Include="bower_components\Jcrop\demos\demo_files\sago.jpg" />
-    <Content Include="bower_components\Jcrop\demos\demo_files\sagomod.jpg" />
-    <Content Include="bower_components\Jcrop\demos\demo_files\sagomod.png" />
-    <Content Include="bower_components\Jcrop\demos\index.html" />
-    <Content Include="bower_components\Jcrop\demos\non-image.html" />
-    <Content Include="bower_components\Jcrop\demos\panel.html" />
-    <Content Include="bower_components\Jcrop\demos\thumbnail.html" />
-    <Content Include="bower_components\Jcrop\Gruntfile.js" />
-    <Content Include="bower_components\Jcrop\index.html" />
-    <Content Include="bower_components\Jcrop\js\Jcrop.js" />
-    <Content Include="bower_components\Jcrop\js\Jcrop.min.js" />
-    <Content Include="bower_components\Jcrop\js\jquery.color.js" />
-    <Content Include="bower_components\Jcrop\js\jquery.min.js" />
-    <Content Include="bower_components\Jcrop\MIT-LICENSE.txt" />
-    <Content Include="bower_components\Jcrop\src\api.js" />
-    <Content Include="bower_components\Jcrop\src\component\CanvasAnimator.js" />
-    <Content Include="bower_components\Jcrop\src\component\CropAnimator.js" />
-    <Content Include="bower_components\Jcrop\src\component\DialDrag.js" />
-    <Content Include="bower_components\Jcrop\src\component\DragState.js" />
-    <Content Include="bower_components\Jcrop\src\component\EventManager.js" />
-    <Content Include="bower_components\Jcrop\src\component\ImageLoader.js" />
-    <Content Include="bower_components\Jcrop\src\component\JcropTouch.js" />
-    <Content Include="bower_components\Jcrop\src\component\KeyWatcher.js" />
-    <Content Include="bower_components\Jcrop\src\component\Selection.js" />
-    <Content Include="bower_components\Jcrop\src\component\StageDrag.js" />
-    <Content Include="bower_components\Jcrop\src\component\StageManager.js" />
-    <Content Include="bower_components\Jcrop\src\component\Thumbnailer.js" />
-    <Content Include="bower_components\Jcrop\src\constructor.js" />
-    <Content Include="bower_components\Jcrop\src\defaults.js" />
-    <Content Include="bower_components\Jcrop\src\filter\BackoffFilter.js" />
-    <Content Include="bower_components\Jcrop\src\filter\ConstrainFilter.js" />
-    <Content Include="bower_components\Jcrop\src\filter\ExtentFilter.js" />
-    <Content Include="bower_components\Jcrop\src\filter\GridFilter.js" />
-    <Content Include="bower_components\Jcrop\src\filter\RatioFilter.js" />
-    <Content Include="bower_components\Jcrop\src\filter\RoundFilter.js" />
-    <Content Include="bower_components\Jcrop\src\filter\ShadeFilter.js" />
-    <Content Include="bower_components\Jcrop\src\intro.js" />
-    <Content Include="bower_components\Jcrop\src\modernizr.js" />
-    <Content Include="bower_components\Jcrop\src\outro.js" />
-    <Content Include="bower_components\Jcrop\src\plugin.js" />
-    <Content Include="bower_components\Jcrop\src\stage\Abstract.js" />
-    <Content Include="bower_components\Jcrop\src\stage\Canvas.js" />
-    <Content Include="bower_components\Jcrop\src\stage\CssTransform.js" />
-    <Content Include="bower_components\Jcrop\src\stage\Image.js" />
-    <Content Include="bower_components\Jcrop\src\static.js" />
     <Content Include="bower_components\jquery-ajax-unobtrusive\jquery.unobtrusive-ajax.js" />
     <Content Include="bower_components\jquery-ajax-unobtrusive\jquery.unobtrusive-ajax.min.js" />
     <Content Include="bower_components\jquery-validation\build\release.js" />
@@ -390,6 +356,7 @@
     <Content Include="bower_components\metisMenu\dist\metisMenu.min.css" />
     <Content Include="bower_components\metisMenu\dist\metisMenu.min.js" />
     <Content Include="bower_components\metisMenu\Gruntfile.js" />
+    <Content Include="Content\13.jpg" />
     <Content Include="Content\dist\css\site.min.css" />
     <Content Include="Content\dist\fonts\fontawesome-webfont.svg" />
     <Content Include="Content\dist\js\menues.min.js" />
@@ -568,17 +535,17 @@
     <Content Include="bower_components\jquery-validation\package.json" />
     <Content Include="bower_components\jquery-validation\README.md" />
     <Content Include="bower_components\jquery-validation\validation.jquery.json" />
-    <Content Include="bower_components\Jcrop\.bower.json" />
-    <Content Include="bower_components\Jcrop\bower.json" />
-    <Content Include="bower_components\Jcrop\demos\crop.php" />
-    <Content Include="bower_components\Jcrop\package.json" />
-    <Content Include="bower_components\Jcrop\README.md" />
-    <Content Include="bower_components\Jcrop\src\css\Jcrop.less" />
-    <Content Include="bower_components\Jcrop\src\css\README.md" />
-    <Content Include="bower_components\Jcrop\src\css\_bootstrap.less" />
-    <Content Include="bower_components\Jcrop\src\css\_reset.less" />
-    <Content Include="bower_components\Jcrop\src\css\_tapmodo.less" />
-    <Content Include="bower_components\Jcrop\src\README.md" />
+    <Content Include="bower_components\cropper\.bower.json" />
+    <Content Include="bower_components\cropper\bower.json" />
+    <Content Include="bower_components\cropper\CHANGELOG.md" />
+    <Content Include="bower_components\cropper\LICENSE" />
+    <Content Include="bower_components\cropper\package.json" />
+    <Content Include="bower_components\cropper\README.md" />
+    <Content Include="bower_components\cropper\src\scss\cropper.scss" />
+    <Content Include="bower_components\cropper\src\scss\_main.scss" />
+    <Content Include="bower_components\cropper\src\scss\_mixins.scss" />
+    <Content Include="bower_components\cropper\src\scss\_utilities.scss" />
+    <Content Include="bower_components\cropper\src\scss\_variables.scss" />
     <None Include="T4MVC.tt.hooks.t4" />
     <None Include="T4MVC.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
