--- a/GE.WebAdmin/Web.config
+++ b/GE.WebAdmin/Web.config
@@ -21,6 +21,11 @@
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
+  <system.webServer>
+    <staticContent>
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff"/>
+    </staticContent>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
