--- a/GE.WebUI/Web.config
+++ b/GE.WebUI/Web.config
@@ -16,11 +16,20 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!--custom-->
+    <add key="EmptyGameIconPath" value="/content/images/EmptyGameIcon.png"/>
+    <add key="EmptyGameGoodImagePath" value="/content/images/EmptyGameGoodImage.jpeg"/>
+    <add key="EmptyGameBadImagePath" value="/content/images/EmptyGameBadImage.jpeg"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
+  <system.webServer>
+    <staticContent>
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff"/>
+    </staticContent>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
