--- a/GE.WebUI/package.json
+++ b/GE.WebUI/package.json
@@ -11,6 +11,7 @@
         "gulp-watch": "4.3.5",
         "gulp-concat": "2.6.0",
         "gulp-uglify": "1.5.1",
-        "merge-stream": "1.0.0"
+        "merge-stream": "1.0.0",
+        "gulp-rename": "1.2.2"
     }
 }
