--- a/GE.WebUI/GE.WebUI.csproj
+++ b/GE.WebUI/GE.WebUI.csproj
@@ -403,6 +403,7 @@
     <Content Include="Content\less\sizes.less" />
     <Content Include="Content\less\last-news-block.less" />
     <Content Include="Content\less\positioned.less" />
+    <Content Include="Content\less\for-gamers-block.less" />
     <None Include="Properties\PublishProfiles\game-exe.pubxml" />
     <None Include="T4MVC.tt.hooks.t4" />
     <None Include="T4MVC.tt">
@@ -416,6 +417,10 @@
   <ItemGroup>
     <Compile Include="App_Start\AutoMapperConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="ArticlesController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Controllers\ArticlesController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\GamesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -434,6 +439,7 @@
     <Compile Include="MenuesController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\VMFGBlock.cs" />
     <Compile Include="Models\VMGameMenu .cs" />
     <Compile Include="Models\VMLastNewsBlock.cs" />
     <Compile Include="Models\VMMenu.cs" />
@@ -445,6 +451,11 @@
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\Sql_Articles.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Sql_Articles.resx</DependentUpon>
+    </Compile>
     <Compile Include="Resources\Sql_News.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -471,6 +482,7 @@
     <Content Include="Views\Menues\_MenuItems.cshtml" />
     <Content Include="Views\Games\_GameList.cshtml" />
     <Content Include="Views\News\LastNewsBlock.cshtml" />
+    <Content Include="Views\Articles\ForGamersBlock.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -496,6 +508,10 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Resources\Sql_Articles.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Sql_Articles.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources\Sql_News.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Sql_News.Designer.cs</LastGenOutput>
